Update and rename docker-file .yml to Docker-Compose file .yml

--- a/dockercomposefile .yml
+++ b/dockercomposefile .yml
@@ -16,7 +16,7 @@ services:
     volumes:
       - ./backend:/app
     working_dir: /app
-    command: python app.py
+    : python app.py
     environment:
       DATABASE_URL: postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}
     depends_on:
