--- a/dockercomposefile .yml
+++ b/dockercomposefile .yml
@@ -16,7 +16,7 @@ services:
     volumes:
       - ./backend:/app
     working_dir: /app
-    ENTRYPOINT: python app.py
+    entrypoint: python app.py
     environment:
       DATABASE_URL: postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}
     depends_on:
@@ -28,7 +28,7 @@ services:
     volumes:
       - ./frontend:/app
     working_dir: /app
-    ENTRYPOINT: npm start
+    entrypoint: npm start
     depends_on:
       - backend
 
